--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>my profile</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>Moh Awad | Awesome Dev</title>
+
+	<link rel="icon" href="favicon.ico" type="image/png" />
+
+	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/styles.css">
+	<!-- <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
+	<link rel="stylesheet" href="css/themes/grey-white.css">
+	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
-<h1>Hello</h1>
+	<main>
+		<div class="intro">Hello, I'm Moh Awad!</div>
+		<div class="tagline">Full-Stack web dev | Android Dev </div>
+		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+		<div class="icons-social">
+			<a target="_blank" href="https://github.com/canaryDev41"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://twitter.com/canaryDev"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://www.facebook.com/canaryDev"><i class="fab fa-facebook"></i></a>
+			<a target="_blank" href="https://www.linkedin.com/in/mohammed-awad-elkhalifa-45b11b150"><i class="fab fa-linkedin"></i></a>
+    </div>
+	</main>
 </body>
 </html>
